- Tag information is loaded from sap backend via destination now - added manifest_browser.json for using it as sort of PWA

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,8 @@
 		<meta charset="UTF-8">
 
 		<title>de.tammenit.sap.community.tags</title>
+		
+		<link rel="manifest" href="manifest_browser.json" />
 
 		<script id="sap-ui-bootstrap"
 			src="https://openui5.hana.ondemand.com/resources/sap-ui-cachebuster/sap-ui-core.js"
